crates/k-rust/tests/snapshots/inner_rules__ambiguity_class_brackets_lowering_to_one_term.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Int ::= \"(\" Int \")\" [bracket]\n  syntax Bool ::= \"true\" [token]\n  syntax Bool ::= \"(\" Bool \")\" [bracket]\n  syntax Bool ::= Int \"dividesInt\" Int [function, symbol(dividesInt)]\n  rule (I1:Int dividesInt I2:Int) => true\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "dividesInt(#SemanticCastToInt(I1),#SemanticCastToInt(I2))=>#token(\"true\",\"Bool\")",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
