crates/k-rust/tests/snapshots/inner_rules__ambiguity_class_grouping_decided_by_the_maximal_typing.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Bool ::= \"true\" [token]\n  syntax Map ::= Map \"[\" KItem \"<-\" KItem \"]\" [function, symbol(Map:update)]\n  syntax Bool ::= K \"==K\" K [function, symbol(_==K_)]\n  syntax Bool ::= Bool \"orBool\" Bool [function, left, symbol(_orBool_)]\n  syntax Bool ::= KItem \"in_keys\" \"(\" Map \")\" [function, symbol(in_keys)]\n  rule K1 in_keys(M [ K2 <- _ ]) => true requires K1 ==K K2 orBool K1 in_keys(M)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "`in_keys`(#SemanticCastToKItem(K1),`Map:update`(#SemanticCastToMap(M),#SemanticCastToKItem(K2),#SemanticCastToKItem(_)))=>#token(\"true\",\"Bool\")",
        requires: "`_orBool_`(`_==K_`(#SemanticCastToKItem(K1),#SemanticCastToKItem(K2)),`in_keys`(#SemanticCastToKItem(K1),#SemanticCastToMap(M)))",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
