crates/k-rust/tests/snapshots/inner_rules__ambiguity_class_lookup_eliminated_by_the_variable_sort.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax List ::= \".List\" [symbol(.List)]\n  syntax Array ::= arr(List) [symbol(arr)]\n  syntax KItem ::= List \"[\" Int \"]\" [function, symbol(List:get)]\n  syntax KItem ::= Array \"[\" Int \"]\" [function, symbol(Array:get)]\n  rule arr(L)[I] => L[I]\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "`Array:get`(arr(#SemanticCastToList(L)),#SemanticCastToInt(I))=>`List:get`(#SemanticCastToList(L),#SemanticCastToInt(I))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
