crates/k-rust/tests/snapshots/inner_rules__ambiguity_class_overload_decided_by_a_strict_cast.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax String ::= r\"[a-z]+\" [token]\n  syntax String ::= String \"+String\" String [function, symbol(_+String__STRING-COMMON)]\n  syntax StringBuffer ::= StringBuffer \"+String\" String [function, avoid, symbol(_+String__STRING-BUFFER-IN-K)]\n  syntax StringBuffer ::= String\n  rule {SB:String +String S:String}::StringBuffer => (SB +String S)::String\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "`_+String__STRING-BUFFER-IN-K`(#SemanticCastToString(SB),#SemanticCastToString(S))=>`_+String__STRING-COMMON`(#SemanticCastToString(SB),#SemanticCastToString(S))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
