crates/k-rust/tests/snapshots/inner_rules__ambiguity_class_overload_with_one_well_sorted_alternative.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Endianness ::= \"LE\" [symbol(LE)] | \"BE\" [symbol(BE)]\n  syntax Signedness ::= \"Signed\" [symbol(Signed)] | \"Unsigned\" [symbol(Unsigned)]\n  syntax Bytes ::= Int2Bytes(Int, Int, Endianness) [function, symbol(Int2Bytes)]\n                 | Int2Bytes(Int, Endianness, Signedness) [function, symbol(Int2BytesNoLen)]\n  rule Int2Bytes(I, E, Unsigned) => Int2Bytes(0, I, E)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "`Int2BytesNoLen`(#SemanticCastToInt(I),#SemanticCastToEndianness(E),`Unsigned`(.KList))=>`Int2Bytes`(#token(\"0\",\"Int\"),#SemanticCastToInt(I),#SemanticCastToEndianness(E))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
