crates/k-rust/tests/snapshots/inner_rules__argument_rewrite_inside_a_bracket_is_decided_by_sort_inference.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax KItem ::= foo(Int) [symbol(foo)]\n  rule foo((I:Int => 0))\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "foo(#SemanticCastToInt(I)=>#token(\"0\",\"Int\"))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
