crates/k-rust/tests/snapshots/inner_rules__argument_rewrite_inside_a_cell.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Exp ::= Int | bar(Exp) [symbol(bar)]\n  syntax KItem ::= foo(Int) [symbol(foo)]\n  syntax List ::= ListItem(KItem) [symbol(ListItem)]\n                | List List [symbol(_List_)]\n                | \".List\" [symbol(.List)]\n  syntax KCell ::= \"<k>\" K \"</k>\" [cell]\n  rule <k> foo(I:Int => 0) </k>\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "`<k>_</k>_MAIN_KCell_K`(#noDots(.KList),foo(#SemanticCastToInt(I)=>#token(\"0\",\"Int\")),#noDots(.KList))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
